--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Data Toad</title>
+    <title>Space Toad</title>
   </head>
   <body>
     <div id="root"></div>
